--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 						<ul class="main-nav__dropdown">
 							<li class="main-nav__dropdown-item"><a href="about.html">О DarkSlot</a></li>
 							<li class="main-nav__dropdown-item"><a href="blog.html">Блог</a></li>
-							<li class="main-nav__dropdown-item"><a href="#" class="main-nav__dropdown-rules">Правила и условия</a></li>
+							<li class="main-nav__dropdown-item"><a href="#" class="main-nav__dropdown-rules">Положения и условия</a></li>
 							<li class="main-nav__dropdown-item"><a href="#" class="main-nav__dropdown-policy">Политика конфиденциальности</a></li>
 						</ul>
 
@@ -363,28 +363,32 @@
 						<div class="winners__avatar"></div>
 						<div class="winners__text">
 							<span class="winners__name">mvarts</span>
-							<span class="winners__gain">11 mBTC в <a href="#" class="winners__game">Игре престолов</a></span>
+							<span class="winners__gain">11 mBTC в</span>
+							<a href="#" class="winners__game">Игре престолов</a>
 						</div>
 					</div>
 					<div class="winners__winner">
 						<div class="winners__avatar"></div>
 						<div class="winners__text">
 							<span class="winners__name">mvarts</span>
-							<span class="winners__gain">11 mBTC в <a href="#" class="winners__game">Игре престолов</a></span>
+							<span class="winners__gain">11 mBTC в</span>
+							<a href="#" class="winners__game">Игре престолов</a>
 						</div>
 					</div>
 					<div class="winners__winner">
 						<div class="winners__avatar"></div>
 						<div class="winners__text">
 							<span class="winners__name">mvarts</span>
-							<span class="winners__gain">11 mBTC в <a href="#" class="winners__game">Игре престолов</a></span>
+							<span class="winners__gain">11 mBTC в</span>
+							<a href="#" class="winners__game">Игре престолов</a>
 						</div>
 					</div>
 					<div class="winners__winner">
 						<div class="winners__avatar"></div>
 						<div class="winners__text">
 							<span class="winners__name">mvarts</span>
-							<span class="winners__gain">11 mBTC в <a href="#" class="winners__game">Игре престолов</a></span>
+							<span class="winners__gain">11 mBTC в</span>
+							<a href="#" class="winners__game">Игре престолов</a>
 						</div>
 					</div>
 				</div>
@@ -487,6 +491,7 @@
 							<li class="games__item"><a href="bonus.html">Приветственный бонус</a></li>
 							<li class="games__item"><a href="#">Reload бонус</a></li>
 							<li class="games__item"><a href="everyweek-cashback.html">Кэшбек</a></li>
+							<li class="games__item"><a href="everyweek-cashback.html">Live Casino Cashback</a></li>
 							<li class="games__item"><a href="day-slot.html">Слот дня во вторник</a></li>
 							<li class="games__item"><a href="free-spins.html">Фриспины в четверг</a></li>
 							<li class="games__item"><a href="tournament.html">Darkslot турнир</a></li>
@@ -498,7 +503,7 @@
 						<h2 class="games__header">О нас</h2>
 						<ul class="games__list">
 							<li class="games__item games__item--policy">Политика конфиденциальности</li>
-							<li class="games__item games__item--rules">Правила и условия</li>
+							<li class="games__item games__item--rules">Положения и условия</li>
 							<li class="games__item games__item--support">Поддержка</li>
 							<li class="games__item"><a href="partners.html">Партнерам</a></li>
 							<li class="games__item"><a href="about.html">О Darkslot</a></li>
