--- a/reload-bonus.html
+++ b/reload-bonus.html
@@ -54,74 +54,6 @@
 							<li class="main-nav__dropdown-item"><a href="bonus.html">Приветственный бонус</a></li>
 							<li class="main-nav__dropdown-item"><a href="reload-bonus.html">Reload бонус</a></li>
 							<li class="main-nav__dropdown-item"><a href="everyweek-cashback.html">Кэшбек</a></li>
-							<li class="main-nav__dropdown-item"><a href="everyweek-cashback.html">Кэшбек</a></li>
-							<li class="main-nav__dropdown-item"><a href="day-slot.html">Слот дня во вторник</a></li>
-							<li class="main-nav__dropdown-item"><a href="free-spins.html">Фриспины в четверг</a></li>
-							<li class="main-nav__dropdown-item"><a href="tournament.html">Darkslot турнир</a></li>
-							<li class="main-nav__dropdown-item"><a href="levels.html">Уровни игроков</a></li>
-						</ul>
-					</li>
-
-					<li class="main-nav__item main-nav__item--hider"><span id="menu-support">Поддержка</span></li>
-					<li class="main-nav__item main-nav__item--hider"><a href="partners.html">Партнерам</a></li>
-					<li class="main-nav__item main-nav__item--arrow main-nav__item--fifth"><span>О нас</span>
-
-						<ul class="main-nav__dropdown">
-							<li class="main-nav__dropdown-item"><a href="about.html">О DarkSlot</a></li>
-							<li class="main-nav__dropdown-item"><a href="blog.html">Блог</a></li>
-							<li class="main-nav__dropdown-item"><a href="#" class="main-nav__dropdown-rules">Правила и условия</a></li>
-							<li class="main-nav__dropdown-item"><a href="#" class="main-nav__dropdown-policy">Политика конфиденциальности</a></li>
-						</ul>
-
-					</li>
-				</ul>
-			</nav>
-
-			<div class="header__buttons">
-				<button class="header__first-button">Регистрация</button>
-				<button class="header__second-button">Вход</button>
-			</div>
-		</div>
-	</header>	<header class="header">
-		<div class="header__wrapper">
-
-			<nav class="main-nav">
-
-				<div class="main-nav__menu-button">
-					<div id="first-line" class="main-nav__menu-line"></div>
-					<div id="second-line" class="main-nav__menu-line"></div>
-					<div id="third-line" class="main-nav__menu-line"></div>
-				</div>
-
-				<button class="main-nav__mobile-reg">Регистрация</button>
-
-				<a href="index.html" class="main-nav__logo"></a>
-
-				<button class="main-nav__mobile-enter">Вход</button>
-
-				<form action="#" class="main-nav__search-form">
-					<input type="search" class="main-nav__search-field">
-				</form>
-				<div class="main-nav__search-close"></div>
-
-				<ul class="main-nav__list">
-					<li class="main-nav__item main-nav__item--arrow main-nav__item--first"><span>Игры</span>
-
-						<ul class="main-nav__dropdown">
-							<li class="main-nav__dropdown-item"><a href="#">Лобби</a></li>
-							<li class="main-nav__dropdown-item"><a href="#">Слоты</a></li>
-							<li class="main-nav__dropdown-item"><a href="#">Джекпоты</a></li>
-							<li class="main-nav__dropdown-item"><a href="#">Настольные</a></li>
-							<li class="main-nav__dropdown-item"><a href="#">Live диллер</a></li>
-						</ul>
-					</li>
-
-					<li class="main-nav__item main-nav__item--arrow main-nav__item--second"><span>Акции</span>
-
-						<ul class="main-nav__dropdown">
-							<li class="main-nav__dropdown-item"><a href="bonus.html">Приветственный бонус</a></li>
-							<li class="main-nav__dropdown-item"><a href="reload-bonus.html">Reload бонус</a></li>
-							<li class="main-nav__dropdown-item"><a href="everyweek-cashback.html">Кэшбек</a></li>
 							<li class="main-nav__dropdown-item"><a href="everyweek-cashback.html">Live Casino Cashback</a></li>
 							<li class="main-nav__dropdown-item"><a href="day-slot.html">Слот дня во вторник</a></li>
 							<li class="main-nav__dropdown-item"><a href="free-spins.html">Фриспины в четверг</a></li>
@@ -137,7 +69,7 @@
 						<ul class="main-nav__dropdown">
 							<li class="main-nav__dropdown-item"><a href="about.html">О DarkSlot</a></li>
 							<li class="main-nav__dropdown-item"><a href="blog.html">Блог</a></li>
-							<li class="main-nav__dropdown-item"><a href="#" class="main-nav__dropdown-rules">Правила и условия</a></li>
+							<li class="main-nav__dropdown-item"><a href="#" class="main-nav__dropdown-rules">Положения и условия</a></li>
 							<li class="main-nav__dropdown-item"><a href="#" class="main-nav__dropdown-policy">Политика конфиденциальности</a></li>
 						</ul>
 
@@ -151,6 +83,7 @@
 			</div>
 		</div>
 	</header>
+	
 	<div class="main-wrapper">
 
 		<section class="reload-bonus">
@@ -367,6 +300,7 @@
 							<li class="games__item"><a href="bonus.html">Приветственный бонус</a></li>
 							<li class="games__item"><a href="#">Reload бонус</a></li>
 							<li class="games__item"><a href="everyweek-cashback.html">Кэшбек</a></li>
+							<li class="games__item"><a href="everyweek-cashback.html">Live Casino Cashback</a></li>
 							<li class="games__item"><a href="day-slot.html">Слот дня во вторник</a></li>
 							<li class="games__item"><a href="free-spins.html">Фриспины в четверг</a></li>
 							<li class="games__item"><a href="tournament.html">Darkslot турнир</a></li>
@@ -378,7 +312,7 @@
 						<h2 class="games__header">О нас</h2>
 						<ul class="games__list">
 							<li class="games__item games__item--policy">Политика конфиденциальности</li>
-							<li class="games__item games__item--rules">Правила и условия</li>
+							<li class="games__item games__item--rules">Положения и условия</li>
 							<li class="games__item games__item--support">Поддержка</li>
 							<li class="games__item"><a href="partners.html">Партнерам</a></li>
 							<li class="games__item"><a href="about.html">О Darkslot</a></li>
