--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 								<li><a href="levels.html">Уровни игроков</a></li>
 							</ul>
 						</li>
-		        <li><a href="#">Поддержка</a></li>
-		        <li><a href="#">Партнерам</a></li>
+		        <li><a href="#" data-toggle="modal" data-target="#modalSupport">Поддержка</a></li>
+		        <li><a href="partners.html">Партнерам</a></li>
 						<li class="dropdown">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">О нас <span class="caret"></span></a>
 							<ul class="dropdown-menu">
@@ -72,8 +72,8 @@
 		      </ul>
 
 		      <ul class="nav navbar-nav navbar-right">
-		        <li><a href="#">Регистрация</a></li>
-		        <li><a href="#">Вход</a></li>
+		        <li><a class="btn btn-default navbar-btn" href="#" data-toggle="modal" data-target="#modalReg">Регистрация</a></li>
+		        <li><a class="btn btn-default navbar-btn" href="#" data-toggle="modal" data-target="#modalSignIn">Вход</a></li>
 		      </ul>
 		    </div><!-- /.navbar-collapse -->
 				<div class="header__wrapper">
@@ -572,30 +572,6 @@
 				<button class="buttons-level__button" id="button3">4 уровень</button>
 			</div>
 		</section>
-
-		<!-- Button trigger modal -->
-		<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-		  Launch demo modal
-		</button>
-
-		<!-- Modal -->
-		<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-		  <div class="modal-dialog" role="document">
-		    <div class="modal-content">
-		      <div class="modal-header">
-		        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-		        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
-		      </div>
-		      <div class="modal-body">
-		        ...
-		      </div>
-		      <div class="modal-footer">
-		        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-		        <button type="button" class="btn btn-primary">Save changes</button>
-		      </div>
-		    </div>
-		  </div>
-		</div>
 
 		<section class="last-winners">
 			<div class="container">
@@ -1426,31 +1402,201 @@
 		<div class="modal-close modal-close--out"></div>
 	</section>
 
-	<div class="level-modal-bg"></div>
 
+	<!-- Инструкция по добавлению модалок -->
+	<!-- Чтоб активировать модалку, любому элементу надо добавить 2 атрибута: data-toggle="modal" data-target="#modalWindow" -->
+	<!-- Шаблон обертки модалки: -->
+	<div class="modal fade modalWindow" id="modalWindow" tabindex="-1" role="dialog" aria-labelledby="modalWindowLabel">
+		<div class="modal-dialog" role="document">
+			<!-- 	ds-fl-content-bg - добавлять этот класс в div с классом ds-fl-content,
+						если модалка должна быть с jpeg фоном, как в модалке для регистрации
+					 	Также, он задает стиль для модального окна, где кроме формы или текста есть еще картинка перса,
+						как в модалке для регистрации rat.jpeg -->
+			<div class="ds-fl-content">
+			 	<!-- 	даже если модалка не содержит картинку перса, все равно оставить этот блок,
+			  			а в теге img атрибуты src и alt оставить пустыми -->
+				<div class="ds-modal-img-wrap">
+					<img src="" alt="" class="ds-modal-img">
+				</div>
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+						<!-- В тег h4 вставляем текст-заголовок модального окна -->
+						<h4 class="modal-title" id="modalWindowLabel">Форма контакта</h4>
+					</div>
+					<div class="modal-body">
+						<!-- Cюда добавить содержимое модалки, без всяких wrap'ов. Например, просто форму -->
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+		<!-- Auth modals -->
+
+		<div class="modal fade modalReg" id="modalReg" tabindex="-1" role="dialog" aria-labelledby="modalRegLabel">
+			<div class="modal-dialog" role="document">
+				<div class="ds-fl-content ds-fl-content-bg">
+
+					<div class="ds-modal-img-wrap">
+						<img src="img/rat.png" alt="rat" class="ds-modal-img">
+					</div>
+
+					<div class="modal-content">
+						<div class="modal-header">
+							<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+							<h4 class="modal-title" id="modalRegLabel">Регистрация</h4>
+						</div>
+
+						<div class="modal-body">
+							<form action="#" class="modal-form modal-form--registration">
+								<div class="social-enter social-enter--reg">
+									<span class="social-enter__text">Зарегестрироваться с помощью:</span>
+
+									<div class="social-enter__socials">
+										<button class="social-enter__soc social-enter__soc--fb"></button>
+										<button class="social-enter__soc social-enter__soc--vk"></button>
+										<button class="social-enter__soc social-enter__soc--tw"></button>
+									</div>
+								</div>
+
+								<input type="email" name="email" placeholder="Email" class="modal-form__input">
+								<input type="text" name="nickname" placeholder="Никнейм" class="modal-form__input">
+								<input type="password" name="password" placeholder="Пароль" class="modal-form__input">
+								<input type="password" name="password-confirm" placeholder="Подтверждение пароля" class="modal-form__input">
+								<select name="currency" id="currency" class="modal-form__currency">
+									<option value="Валюта" selected disabled>Валюта</option>
+									<option value="rub">Рубли</option>
+									<option value="euro">Евро</option>
+									<option value="dollar">Доллары</option>
+									<option value="btc">Биткоины</option>
+								</select>
+								<input type="text" name="code" placeholder="Бонусный код" class="modal-form__input">
+
+								<div class="modal-form__checkbox-wrapper">
+									<input type="checkbox" id="reg-checkbox" class="modal-form__checkbox">
+									<label for="reg-checkbox" class="modal-form__label-checkbox">Мне есть 18 лет и я принимаю Положения и условия</label>
+								</div>
+
+								<input type="submit" value="Регистрация" class="modal-form__button">
+							</form>
+						</div>
+
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="modal fade modalSignIn" id="modalSignIn" tabindex="-1" role="dialog" aria-labelledby="modalSignInLabel">
+			<div class="modal-dialog" role="document">
+				<div class="ds-fl-content ds-fl-content-bg">
+					<div class="ds-modal-img-wrap">
+						<img src="img/bear.png" alt="bear" class="ds-modal-img">
+					</div>
+					<div class="modal-content">
+						<div class="modal-header">
+							<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+							<h4 class="modal-title" id="modalSignInLabel">Авторизация</h4>
+						</div>
+						<div class="modal-body">
+							<form action="#" class="modal-form modal-form--enter">
+
+								<input type="email" class="modal-form__input" placeholder="Email">
+								<input type="password" class="modal-form__input" placeholder="Пароль">
+								<input type="submit" class="modal-form__button" id="enter-button" value="Войти">
+
+								<div class="social-enter">
+									<span class="social-enter__text">Войти с помощью:</span>
+
+									<div class="social-enter__socials">
+										<button class="social-enter__soc social-enter__soc--fb"></button>
+										<button class="social-enter__soc social-enter__soc--vk"></button>
+										<button class="social-enter__soc social-enter__soc--tw"></button>
+									</div>
+								</div>
+							</form>
+
+							<button class="modal-form__forgot-pass" data-toggle="modal" data-target="#modalRecovery">Я забыл пароль</button>
+						</div>
+
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="modal fade modalRecovery" id="modalRecovery" tabindex="-1" role="dialog" aria-labelledby="modalRecoveryLabel">
+			<div class="modal-dialog" role="document">
+				<div class="ds-fl-content">
+					<div class="ds-modal-img-wrap">
+						<img src="" alt="" class="ds-modal-img">
+					</div>
+					<div class="modal-content">
+						<div class="modal-header">
+							<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+							<h4 class="modal-title" id="modalRecoveryLabel">Забыли пароль?</h4>
+							<!-- <h2 class="modal-form__header">Авторизация</h2> -->
+						</div>
+						<div class="modal-body">
+							<form action="#" class="modal-form modal-form--recovery">
+								<p class="modal-form__text">Введите свой электронный адрес, и Вам будут высланы инструкции по замене пароля. <br>По дальнейшим вопросам Вы можете связаться с нами через страницу <span class="modal-form__support">поддержка</span></p>
+
+								<input type="email" class="modal-form__input" placeholder="Email">
+								<input type="submit" class="modal-form__button" value="Восстановить пароль" id="forgot-button">
+							</form>
+
+							<span class="modal-form__not-recieve" id="recovery-unlock">Не получили инструкций для разблокировки?</span>
+							<span class="modal-form__not-recieve" id="recovery-confirm">Не получили инструкций для подтверждения?</span>
+						</div>
+
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- End Auth modals -->
+
+
+		<div class="modal fade modalSupport" id="modalSupport" tabindex="-1" role="dialog" aria-labelledby="modalSupportLabel">
+			<div class="modal-dialog" role="document">
+				<div class="ds-fl-content ds-fl-content-bg">
+					<div class="ds-modal-img-wrap">
+						<img src="img/tiger.png" alt="tiger" class="ds-modal-img">
+					</div>
+					<div class="modal-content">
+						<div class="modal-header">
+							<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+							<h4 class="modal-title" id="modalSupportLabel">Форма контакта</h4>
+						</div>
+						<div class="modal-body">
+							<form action="#" class="modal-form modal-form--contact">
+								<input type="email" class="modal-form__input" placeholder="Email">
+								<input type="text" class="modal-form__input" placeholder="Тема сообщения">
+								<textarea name="textarea-contact" id="text-contact" cols="30" rows="10" class="modal-form__text-field" placeholder="Текст..."></textarea>
+								<input type="submit" class="modal-form__button" value="Отправить">
+							</form>
+						</div>
+
+					</div>
+				</div>
+			</div>
+		</div>
+
+
+	<div class="level-modal-bg"></div>
 	<div id="preloader"></div>
 
 	<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="bootstrap/assets/javascripts/bootstrap.js"></script>
 
-
-
 	<!-- <script type="text/javascript" src="js/slick.min.js"></script> -->
-
 	<!-- <script type="text/javascript" src="js/tabs.js"></script> -->
-
 	<script type="text/javascript" src="js/menu.js"></script>
-
 	<!-- <script type="text/javascript" src="js/fixed-bar.js"></script> -->
-
 	<!-- <script type="text/javascript" src="js/modals.js"></script> -->
-
 	<script type="text/javascript" src="js/reg-password.js"></script>
-
 	<!-- <script type="text/javascript" src="js/jquery.formstyler.min.js"></script> -->
-
 	<script type="text/javascript" src="js/jquery.mCustomScrollbar.concat.min.js"></script>
-
 	<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
