--- a/payments.html
+++ b/payments.html
@@ -6,7 +6,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<title>Dark Slot</title>
 	<link rel="shortcut icon" href="img/favicon.png" type="image/png">
-	<link rel="stylesheet" href="assets/css/bootstrap.css">
 	<link rel="stylesheet" href="assets/css/main.css">
 
 	<script src="js/jquery-2.0.0.min.js"></script>
@@ -25,259 +24,268 @@
 
 	<div class="main-wrapper">
 
-	<div class="container">
-		<div class="row">
-			<div class="col-xs-12">
-				<h1>Платежи</h1>
-				<p>Доступные валюты<br>Мы гордимся тем, что BitStarz - это безопасное онлайн-казино, в котором можно использовать множество валют. На данный момент мы принимаем: EUR, USD, SEK, CAD, AUD, NOK, RUB и BTC</p>
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-12">
+					<h1>Платежи</h1>
+					<p>Доступные валюты<br>Мы гордимся тем, что BitStarz - это безопасное онлайн-казино, в котором можно использовать множество валют. На данный момент мы принимаем: EUR, USD, SEK, CAD, AUD, NOK, RUB и BTC</p>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-xs-12">
+					<h3>Депозит</h3>
+
+					<table class="payment-table">
+						<tr class="payment-table-head">
+							<td>Платежный метод</td>
+							<td>Тип</td>
+							<td>Комиссия</td>
+							<td>Время обработки</td>
+							<td>Лимит на одну транзакцию</td>
+							<td></td>
+						</tr>
+
+						<tr>
+							<td><img src="img/payments/qiwi.png" alt="qiwi"></td>
+							<td>QIWI</td>
+							<td>2.5%</td>
+							<td>Мгновенно</td>
+							<td>Мин. 1000₽<br>Макс. 250,000₽</td>
+							<td><button class="btn btn-secondary" data-toggle="modal" data-target="#modalReg">Депозит</button></td>
+
+							<!-- Кнопка "Депозит" для залогиненого пользователя -->
+						</tr>
+
+						<tr>
+							<td><img src="img/payments/yandex.png" alt="yandex"></td>
+							<td>Yandex деньги</td>
+							<td>2.5%</td>
+							<td>Мгновенно</td>
+							<td>Мин. 1000₽<br>Макс. 250,000₽</td>
+							<td><button class="btn btn-secondary" data-toggle="modal" data-target="#modalReg">Регистрация</button></td>
+						</tr>
+
+						<tr>
+							<td><img src="img/payments/webmoney.png" alt="webmoney"></td>
+							<td>Webmoney</td>
+							<td>Бесплатно</td>
+							<td>Мгновенно</td>
+							<td>Мин. 1000₽<br>Макс. 15,000₽</td>
+							<td><button class="btn btn-secondary" data-toggle="modal" data-target="#modalReg">Регистрация</button></td>
+						</tr>
+
+						<tr>
+							<td><img src="img/payments/visa.png" alt="visa"></td>
+							<td>Кредитная карта</td>
+							<td>2.5%</td>
+							<td>Мгновенно</td>
+							<td>Мин. 1000₽<br>Макс. 250,000₽</td>
+							<td><button class="btn btn-secondary" data-toggle="modal" data-target="#modalReg">Регистрация</button></td>
+						</tr>
+
+						<tr>
+							<td><img src="img/payments/mastercard.png" alt="mastercard"></td>
+							<td>Кредитная карта</td>
+							<td>2.5%</td>
+							<td>Мгновенно</td>
+							<td>Мин. 1000₽<br>Макс. 250,000₽</td>
+							<td><button class="btn btn-secondary" data-toggle="modal" data-target="#modalReg">Регистрация</button></td>
+						</tr>
+
+						<tr>
+							<td><img src="img/payments/bitcoin.png" alt="bitcoin"></td>
+							<td>Онлайн-валюта</td>
+							<td>Бесплатно</td>
+							<td>Мгновенно</td>
+							<td>Мин. 0.0001 BTC</td>
+							<td><button class="btn btn-secondary" data-toggle="modal" data-target="#modalReg">Регистрация</button></td>
+						</tr>
+
+						<tr>
+							<td><img src="img/payments/maestro.png" alt="maestro"></td>
+							<td>Кредитная карта</td>
+							<td>2.5%</td>
+							<td>Мгновенно</td>
+							<td>Мин. 1000₽<br>Макс. 250,000₽</td>
+							<td><button class="btn btn-secondary" data-toggle="modal" data-target="#modalReg">Регистрация</button></td>
+						</tr>
+
+						<tr>
+							<td><img src="img/payments/skrill.png" alt="skrill"></td>
+							<td>Электронные кошельки</td>
+							<td>2.5%</td>
+							<td>Мгновенно</td>
+							<td>Мин. 1000₽<br>Макс. 250,000₽</td>
+							<td><button class="btn btn-secondary" data-toggle="modal" data-target="#modalReg">Регистрация</button></td>
+						</tr>
+
+						<tr>
+							<td><img src="img/payments/neteller.png" alt="neteller"></td>
+							<td>Электронные кошельки</td>
+							<td>2.5%</td>
+							<td>Мгновенно</td>
+							<td>Мин. 1000₽<br>Макс. 250,000₽</td>
+							<td><button class="btn btn-secondary" data-toggle="modal" data-target="#modalReg">Регистрация</button></td>
+						</tr>
+
+						<tr>
+							<td><img src="img/payments/bank-transfer.png" alt="bank transfer"></td>
+							<td>Банковский перевод</td>
+							<td>Бесплатно</td>
+							<td>1-3 банковских дня</td>
+							<td>Мин. 1000₽<br>Макс. 250,000₽</td>
+							<td><button class="btn btn-secondary" data-toggle="modal" data-target="#modalReg">Регистрация</button></td>
+						</tr>
+
+						<tr>
+							<td><img src="img/payments/cubits.png" alt="cubits"></td>
+							<td>Биткоин</td>
+							<td>0.5%</td>
+							<td>Мгновенно</td>
+							<td>Мин. 300₽<br>Макс. 250,000₽</td>
+							<td><button class="btn btn-secondary" data-toggle="modal" data-target="#modalReg">Регистрация</button></td>
+						</tr>
+
+						<tr>
+							<td><img src="img/payments/paysafecard.png" alt="paysafecard"></td>
+							<td>PaySafe</td>
+							<td>2.5%</td>
+							<td>Мгновенно</td>
+							<td>Мин. 1000₽<br>Макс. 250,000₽</td>
+							<td><button class="btn btn-secondary" data-toggle="modal" data-target="#modalReg">Регистрация</button></td>
+						</tr>
+					</table>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-xs-12">
+					<h3>Выплата</h3>
+
+					<table class="payment-table">
+						<tr class="payment-table-head">
+							<td>Платежный метод</td>
+							<td>Тип</td>
+							<td>Комиссия</td>
+							<td>Время обработки</td>
+							<td>Лимит на одну транзакцию</td>
+							<td></td>
+						</tr>
+
+						<tr>
+							<td><img src="img/payments/russian-banks.png" alt="russian banks"></td>
+							<td>Платежи через карты банков России</td>
+							<td>Бесплатно</td>
+							<td>Мгновенно</td>
+							<td>Мин. 2500₽<br>Макс. 75,000₽</td>
+							<td><button class="btn btn-secondary" data-toggle="modal" data-target="#modalReg">Депозит</button></td>
+
+							<!-- Кнопка "Депозит" для залогиненого пользователя -->
+						</tr>
+
+						<tr>
+							<td><img src="img/payments/webmoney.png" alt="webmoney"></td>
+							<td>Webmoney</td>
+							<td>Бесплатно</td>
+							<td>Мгновенно</td>
+							<td>Мин. 2500₽<br>Макс. 15,000₽</td>
+							<td><button class="btn btn-secondary" data-toggle="modal" data-target="#modalReg">Регистрация</button></td>
+						</tr>
+
+						<tr>
+							<td><img src="img/payments/qiwi.png" alt="qiwi"></td>
+							<td>QIWI</td>
+							<td>Бесплатно</td>
+							<td>Мгновенно</td>
+							<td>Мин. 2500₽<br>Макс. 250,000₽</td>
+							<td><button class="btn btn-secondary" data-toggle="modal" data-target="#modalReg">Регистрация</button></td>
+						</tr>
+
+						<tr>
+							<td><img src="img/payments/yandex.png" alt="yandex"></td>
+							<td>Yandex деньги</td>
+							<td>Бесплатно</td>
+							<td>Мгновенно</td>
+							<td>Мин. 2500₽<br>Макс. 250,000₽</td>
+							<td><button class="btn btn-secondary" data-toggle="modal" data-target="#modalReg">Регистрация</button></td>
+						</tr>
+
+						<tr>
+							<td><img src="img/payments/visa.png" alt="visa"></td>
+							<td>Кредитная карта</td>
+							<td>Бесплатно</td>
+							<td>1-3 банковских дня</td>
+							<td>Мин. 2500₽<br>Макс. 250,000₽</td>
+							<td><button class="btn btn-secondary" data-toggle="modal" data-target="#modalReg">Регистрация</button></td>
+						</tr>
+
+						<tr>
+							<td><img src="img/payments/mastercard.png" alt="mastercard"></td>
+							<td>Кредитная карта</td>
+							<td>Бесплатно</td>
+							<td>1-3 банковских дня</td>
+							<td>Мин. 2500₽<br>Макс. 250,000₽</td>
+							<td><button class="btn btn-secondary" data-toggle="modal" data-target="#modalReg">Регистрация</button></td>
+						</tr>
+
+						<tr>
+							<td><img src="img/payments/bitcoin.png" alt="bitcoin"></td>
+							<td>Онлайн-валюта</td>
+							<td>Бесплатно</td>
+							<td>Мгновенно</td>
+							<td>Мин. 0.00001 BTC<br>Макс. 20 BTC</td>
+							<td><button class="btn btn-secondary" data-toggle="modal" data-target="#modalReg">Регистрация</button></td>
+						</tr>
+
+						<tr>
+							<td><img src="img/payments/skrill.png" alt="skrill"></td>
+							<td>Электронные кошельки</td>
+							<td>Бесплатно</td>
+							<td>Мгновенно</td>
+							<td>Мин. 2500₽<br>Макс. 500,000₽</td>
+							<td><button class="btn btn-secondary" data-toggle="modal" data-target="#modalReg">Регистрация</button></td>
+						</tr>
+
+						<tr>
+							<td><img src="img/payments/neteller.png" alt="neteller"></td>
+							<td>Электронные кошельки</td>
+							<td>Бесплатно</td>
+							<td>Мгновенно</td>
+							<td>Мин. 2500₽<br>Макс. 500,000₽</td>
+							<td><button class="btn btn-secondary" data-toggle="modal" data-target="#modalReg">Регистрация</button></td>
+						</tr>
+
+						<tr>
+							<td><img src="img/payments/bank-transfer.png" alt="bank transfer"></td>
+							<td>Банковский перевод</td>
+							<td>Бесплатно</td>
+							<td>1-3 банковских дня</td>
+							<td>Мин. 6000₽<br>Макс. 250,000₽</td>
+							<td><button class="btn btn-secondary" data-toggle="modal" data-target="#modalReg">Регистрация</button></td>
+						</tr>
+
+						<tr>
+							<td><img src="img/payments/cubits.png" alt="cubits"></td>
+							<td>Биткоин</td>
+							<td>Бесплатно</td>
+							<td>Мгновенно</td>
+							<td>Мин. 300₽<br>Макс. 250,000₽</td>
+							<td><button class="btn btn-secondary" data-toggle="modal" data-target="#modalReg">Регистрация</button></td>
+						</tr>
+					</table>
+				</div>
 			</div>
 		</div>
 
-		<div class="row">
-			<div class="col-xs-12">
-				<h3>Депозит</h3>
-
-				<table class="payment-table">
-					<tr class="payment-table-head">
-						<td>Платежный метод</td>
-						<td>Тип</td>
-						<td>Комиссия</td>
-						<td>Время обработки</td>
-						<td>Лимит на одну транзакцию</td>
-						<td></td>
-					</tr>
-
-					<tr>
-						<td><img src="img/payments/qiwi.png" alt="qiwi"></td>
-						<td>QIWI</td>
-						<td>2.5%</td>
-						<td>Мгновенно</td>
-						<td>Мин. 1000₽<br>Макс. 250,000₽</td>
-						<td><button class="btn btn-secondary" data-toggle="modal" data-target="#modalReg">Депозит</button></td>
-
-						<!-- Кнопка "Депозит" для залогиненого пользователя -->
-					</tr>
-
-					<tr>
-						<td><img src="img/payments/yandex.png" alt="yandex"></td>
-						<td>Yandex деньги</td>
-						<td>2.5%</td>
-						<td>Мгновенно</td>
-						<td>Мин. 1000₽<br>Макс. 250,000₽</td>
-						<td><button class="btn btn-secondary" data-toggle="modal" data-target="#modalReg">Регистрация</button></td>
-					</tr>
-
-					<tr>
-						<td><img src="img/payments/webmoney.png" alt="webmoney"></td>
-						<td>Webmoney</td>
-						<td>Бесплатно</td>
-						<td>Мгновенно</td>
-						<td>Мин. 1000₽<br>Макс. 15,000₽</td>
-						<td><button class="btn btn-secondary" data-toggle="modal" data-target="#modalReg">Регистрация</button></td>
-					</tr>
-
-					<tr>
-						<td><img src="img/payments/visa.png" alt="visa"></td>
-						<td>Кредитная карта</td>
-						<td>2.5%</td>
-						<td>Мгновенно</td>
-						<td>Мин. 1000₽<br>Макс. 250,000₽</td>
-						<td><button class="btn btn-secondary" data-toggle="modal" data-target="#modalReg">Регистрация</button></td>
-					</tr>
-
-					<tr>
-						<td><img src="img/payments/mastercard.png" alt="mastercard"></td>
-						<td>Кредитная карта</td>
-						<td>2.5%</td>
-						<td>Мгновенно</td>
-						<td>Мин. 1000₽<br>Макс. 250,000₽</td>
-						<td><button class="btn btn-secondary" data-toggle="modal" data-target="#modalReg">Регистрация</button></td>
-					</tr>
-
-					<tr>
-						<td><img src="img/payments/bitcoin.png" alt="bitcoin"></td>
-						<td>Онлайн-валюта</td>
-						<td>Бесплатно</td>
-						<td>Мгновенно</td>
-						<td>Мин. 0.0001 BTC</td>
-						<td><button class="btn btn-secondary" data-toggle="modal" data-target="#modalReg">Регистрация</button></td>
-					</tr>
-
-					<tr>
-						<td><img src="img/payments/maestro.png" alt="maestro"></td>
-						<td>Кредитная карта</td>
-						<td>2.5%</td>
-						<td>Мгновенно</td>
-						<td>Мин. 1000₽<br>Макс. 250,000₽</td>
-						<td><button class="btn btn-secondary" data-toggle="modal" data-target="#modalReg">Регистрация</button></td>
-					</tr>
-
-					<tr>
-						<td><img src="img/payments/skrill.png" alt="skrill"></td>
-						<td>Электронные кошельки</td>
-						<td>2.5%</td>
-						<td>Мгновенно</td>
-						<td>Мин. 1000₽<br>Макс. 250,000₽</td>
-						<td><button class="btn btn-secondary" data-toggle="modal" data-target="#modalReg">Регистрация</button></td>
-					</tr>
-
-					<tr>
-						<td><img src="img/payments/neteller.png" alt="neteller"></td>
-						<td>Электронные кошельки</td>
-						<td>2.5%</td>
-						<td>Мгновенно</td>
-						<td>Мин. 1000₽<br>Макс. 250,000₽</td>
-						<td><button class="btn btn-secondary" data-toggle="modal" data-target="#modalReg">Регистрация</button></td>
-					</tr>
-
-					<tr>
-						<td><img src="img/payments/bank-transfer.png" alt="bank transfer"></td>
-						<td>Банковский перевод</td>
-						<td>Бесплатно</td>
-						<td>1-3 банковских дня</td>
-						<td>Мин. 1000₽<br>Макс. 250,000₽</td>
-						<td><button class="btn btn-secondary" data-toggle="modal" data-target="#modalReg">Регистрация</button></td>
-					</tr>
-
-					<tr>
-						<td><img src="img/payments/cubits.png" alt="cubits"></td>
-						<td>Биткоин</td>
-						<td>0.5%</td>
-						<td>Мгновенно</td>
-						<td>Мин. 300₽<br>Макс. 250,000₽</td>
-						<td><button class="btn btn-secondary" data-toggle="modal" data-target="#modalReg">Регистрация</button></td>
-					</tr>
-
-					<tr>
-						<td><img src="img/payments/paysafecard.png" alt="paysafecard"></td>
-						<td>PaySafe</td>
-						<td>2.5%</td>
-						<td>Мгновенно</td>
-						<td>Мин. 1000₽<br>Макс. 250,000₽</td>
-						<td><button class="btn btn-secondary" data-toggle="modal" data-target="#modalReg">Регистрация</button></td>
-					</tr>
-				</table>
-			</div>
-		</div>
-
-		<div class="row">
-			<div class="col-xs-12">
-				<h3>Выплата</h3>
-
-				<table class="payment-table">
-					<tr class="payment-table-head">
-						<td>Платежный метод</td>
-						<td>Тип</td>
-						<td>Комиссия</td>
-						<td>Время обработки</td>
-						<td>Лимит на одну транзакцию</td>
-						<td></td>
-					</tr>
-
-					<tr>
-						<td><img src="img/payments/russian-banks.png" alt="russian banks"></td>
-						<td>Платежи через карты банков России</td>
-						<td>Бесплатно</td>
-						<td>Мгновенно</td>
-						<td>Мин. 2500₽<br>Макс. 75,000₽</td>
-						<td><button class="btn btn-secondary" data-toggle="modal" data-target="#modalReg">Депозит</button></td>
-
-						<!-- Кнопка "Депозит" для залогиненого пользователя -->
-					</tr>
-
-					<tr>
-						<td><img src="img/payments/webmoney.png" alt="webmoney"></td>
-						<td>Webmoney</td>
-						<td>Бесплатно</td>
-						<td>Мгновенно</td>
-						<td>Мин. 2500₽<br>Макс. 15,000₽</td>
-						<td><button class="btn btn-secondary" data-toggle="modal" data-target="#modalReg">Регистрация</button></td>
-					</tr>
-
-					<tr>
-						<td><img src="img/payments/qiwi.png" alt="qiwi"></td>
-						<td>QIWI</td>
-						<td>Бесплатно</td>
-						<td>Мгновенно</td>
-						<td>Мин. 2500₽<br>Макс. 250,000₽</td>
-						<td><button class="btn btn-secondary" data-toggle="modal" data-target="#modalReg">Регистрация</button></td>
-					</tr>
-
-					<tr>
-						<td><img src="img/payments/yandex.png" alt="yandex"></td>
-						<td>Yandex деньги</td>
-						<td>Бесплатно</td>
-						<td>Мгновенно</td>
-						<td>Мин. 2500₽<br>Макс. 250,000₽</td>
-						<td><button class="btn btn-secondary" data-toggle="modal" data-target="#modalReg">Регистрация</button></td>
-					</tr>
-
-					<tr>
-						<td><img src="img/payments/visa.png" alt="visa"></td>
-						<td>Кредитная карта</td>
-						<td>Бесплатно</td>
-						<td>1-3 банковских дня</td>
-						<td>Мин. 2500₽<br>Макс. 250,000₽</td>
-						<td><button class="btn btn-secondary" data-toggle="modal" data-target="#modalReg">Регистрация</button></td>
-					</tr>
-
-					<tr>
-						<td><img src="img/payments/mastercard.png" alt="mastercard"></td>
-						<td>Кредитная карта</td>
-						<td>Бесплатно</td>
-						<td>1-3 банковских дня</td>
-						<td>Мин. 2500₽<br>Макс. 250,000₽</td>
-						<td><button class="btn btn-secondary" data-toggle="modal" data-target="#modalReg">Регистрация</button></td>
-					</tr>
-
-					<tr>
-						<td><img src="img/payments/bitcoin.png" alt="bitcoin"></td>
-						<td>Онлайн-валюта</td>
-						<td>Бесплатно</td>
-						<td>Мгновенно</td>
-						<td>Мин. 0.00001 BTC<br>Макс. 20 BTC</td>
-						<td><button class="btn btn-secondary" data-toggle="modal" data-target="#modalReg">Регистрация</button></td>
-					</tr>
-
-					<tr>
-						<td><img src="img/payments/skrill.png" alt="skrill"></td>
-						<td>Электронные кошельки</td>
-						<td>Бесплатно</td>
-						<td>Мгновенно</td>
-						<td>Мин. 2500₽<br>Макс. 500,000₽</td>
-						<td><button class="btn btn-secondary" data-toggle="modal" data-target="#modalReg">Регистрация</button></td>
-					</tr>
-
-					<tr>
-						<td><img src="img/payments/neteller.png" alt="neteller"></td>
-						<td>Электронные кошельки</td>
-						<td>Бесплатно</td>
-						<td>Мгновенно</td>
-						<td>Мин. 2500₽<br>Макс. 500,000₽</td>
-						<td><button class="btn btn-secondary" data-toggle="modal" data-target="#modalReg">Регистрация</button></td>
-					</tr>
-
-					<tr>
-						<td><img src="img/payments/bank-transfer.png" alt="bank transfer"></td>
-						<td>Банковский перевод</td>
-						<td>Бесплатно</td>
-						<td>1-3 банковских дня</td>
-						<td>Мин. 6000₽<br>Макс. 250,000₽</td>
-						<td><button class="btn btn-secondary" data-toggle="modal" data-target="#modalReg">Регистрация</button></td>
-					</tr>
-
-					<tr>
-						<td><img src="img/payments/cubits.png" alt="cubits"></td>
-						<td>Биткоин</td>
-						<td>Бесплатно</td>
-						<td>Мгновенно</td>
-						<td>Мин. 300₽<br>Макс. 250,000₽</td>
-						<td><button class="btn btn-secondary" data-toggle="modal" data-target="#modalReg">Регистрация</button></td>
-					</tr>
-				</table>
-			</div>
-		</div>
-	</div>
+		<!-- Footer-Wrapper insertion -->
+		<script>
+			$(document).ready(function(){
+			 	$('#ds-footer-wrapper').load('./_footer-wrapper.html');
+			});
+		</script>
+		<div id="ds-footer-wrapper"></div>
+		<!-- End FooterWrapper insertion -->
 	</div>
 
 </div>
